# cd-database

./: .gitignore  CMakeLists.txt  README.md  algorithm.txt  compile_commands.json  functions.md  plan.md
include/: database.h
src/: append_record.c  base_utils.c  create_record.c  delete_record.c  file_io.c  input.c  main.c  option_menu.c  output.c  path_utils.c  save_record_as.c  str_utils.c  view_entry.c  view_record.c
